+ more attempts to stop horizontal scroll

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -23,7 +23,12 @@ body {
     margin: 0;
 
     max-width: 100%;
+    width: 100vw;
     overflow-x: hidden;
+}
+
+body > * {
+    max-width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6, p { transition: color 0.25s ease-in-out; }
